<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_custom_calendar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentCalander"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:paddingTop="1dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight=".5"
            android:background="@color/colorAccentCalander"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:paddingTop="1dp">

            <ImageView
                android:id="@+id/previous_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_chevron_left_white_48dp" />

            <TextView
                android:id="@+id/display_current_date"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="3"
                android:gravity="center|center_vertical"
                android:text="@string/current_date"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/next_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_chevron_right_white_48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.5"
            android:background="@color/colorAccentCalander"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:paddingTop="1dp">
            <Button
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="15dp"
                android:layout_marginTop="4dp"
                android:gravity="center|center_vertical"
                android:text="@string/today"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/dialogbuttoncancel"
                 />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="2dp">

        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="@color/colorAsh"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/colorAsh"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@color/colorAsh"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@color/colorAsh"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="@color/colorAsh"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@color/colorAsh"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@color/colorAsh"
            android:textStyle="bold" />
    </LinearLayout>

    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/borderAsh"
        android:numColumns="7"
        android:fastScrollEnabled="false"
        android:verticalSpacing="1dp" />
</LinearLayout>